parser/bif.output
Terminals unused in grammar

   QUOTE
   SHA256
   SHAKE256


State 14 conflicts: 39 shift/reduce
State 17 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 57 conflicts: 4 shift/reduce
State 82 conflicts: 4 shift/reduce
State 207 conflicts: 16 shift/reduce
State 330 conflicts: 17 shift/reduce
State 351 conflicts: 17 shift/reduce, 1 reduce/reduce
State 374 conflicts: 1 shift/reduce
State 386 conflicts: 71 reduce/reduce
State 388 conflicts: 71 reduce/reduce
State 472 conflicts: 12 shift/reduce
State 492 conflicts: 16 shift/reduce
State 509 conflicts: 1 shift/reduce
State 516 conflicts: 1 shift/reduce
State 522 conflicts: 1 shift/reduce


Grammar

    0 $accept: bif $end

    1 bif: group_list

    2 group_list: /* empty */
    3           | group_list bifoptions

    4 bifoptions: INCLUDE COLON filename

    5 $@1: /* empty */

    6 bifoptions: WORD $@1 COLON OBRACE file_list EBRACE

    7 file_list: /* empty */
    8          | file_list file_spec
    9          | file_list other_spec
   10          | file_list image_spec
   11          | file_list metahdr_spec
   12          | file_list new_pdi_spec
   13          | file_list new_file_spec
   14          | file_list partition_spec

   15 $@2: /* empty */

   16 metahdr_spec: METAHEADER OBRACE $@2 metahdr_attr_list EBRACE

   17 metahdr_attr_list: metahdr_attr
   18                  | metahdr_attr COMMA metahdr_attr_list
   19                  | metahdr_attr metahdr_attr_list

   20 metahdr_attr: /* empty */
   21             | ENCRYPTION EQUAL encrvalue
   22             | KEYSRC_ENCRYPTION EQUAL key_src
   23             | AES_KEY_FILE EQUAL filename
   24             | AUTHENTICATION EQUAL authvalue
   25             | PPK_FILE EQUAL filename
   26             | PSK_FILE EQUAL filename
   27             | SPK_FILE EQUAL filename
   28             | SSK_FILE EQUAL filename
   29             | SPK_SIGNATURE_FILE EQUAL filename
   30             | PRESIGN EQUAL filename
   31             | REVOKE_ID EQUAL expression
   32             | SPK_REVOKE_ID EQUAL expression
   33             | CHECKSUM EQUAL checkvalue
   34             | DPA_CM
   35             | BLOCKS EQUAL metahdr_blk
   36             | PUFHD_LOC

   37 optional_data: optional_data_attr
   38              | optional_data_attr SEMICOLON optional_data

   39 optional_data_attr: filename COMMA ID EQUAL expression
   40                   | /* empty */

   41 metahdr_blk: metahdr_blk_attr
   42            | metahdr_blk_attr SEMICOLON metahdr_blk

   43 metahdr_blk_attr: expression
   44                 | expression LPAREN expression RPAREN
   45                 | expression LPAREN ASTERISK RPAREN

   46 new_pdi_spec: ID EQUAL expression
   47             | PARENT_ID EQUAL expression
   48             | ID_CODE EQUAL expression
   49             | EXT_ID_CODE EQUAL expression
   50             | other_file_attr EQUAL filename
   51             | KEYSRC_ENCRYPTION EQUAL key_src
   52             | PARTITION_TYPE EQUAL ptypevalue
   53             | REVOKE_ID EQUAL expression

   54 image_spec: image_list
   55           | image_spec image_list

   56 $@3: /* empty */

   57 image_list: IMAGE OBRACE $@3 image_content EBRACE

   58 image_content: /* empty */
   59              | image_content image_attributes_list
   60              | image_content file_spec
   61              | image_content partition_spec

   62 image_attributes_list: image_attributes
   63                      | image_attributes COMMA image_attributes_list
   64                      | image_attributes image_attributes_list

   65 image_attributes: ID EQUAL expression
   66                 | NAME EQUAL WORD
   67                 | DELAY_HANDOFF
   68                 | DELAY_LOAD
   69                 | INIT
   70                 | COPY EQUAL expression
   71                 | PARTITION_TYPE EQUAL ptypevalue
   72                 | UNIQUE_ID EQUAL expression
   73                 | PARENT_UNIQUE_ID EQUAL expression
   74                 | FUNCTION_ID EQUAL expression
   75                 | PCR_NUMBER EQUAL expression
   76                 | PCR_MEASUREMENT_INDEX EQUAL expression

   77 partition_spec: PARTITION partition_content
   78               | partition_content

   79 partition_content: /* empty */
   80                  | partition_content file_spec
   81                  | partition_content new_file_spec

   82 other_spec: OBRACKET KEYSRC_ENCRYPTION EBRACKET key_src

   83 $@4: /* empty */

   84 other_spec: OBRACKET FSBL_CONFIG $@4 EBRACKET fsbl_attr_list
   85           | FSBL_CONFIG OBRACE fsbl_attr_list EBRACE
   86           | BOOT_DEVICE OBRACE sec_boot_attr_list EBRACE
   87           | OBRACKET BOOT_DEVICE EBRACKET boot_device_type
   88           | BOOT_DEVICE EQUAL boot_device_type
   89           | OBRACKET AUTH_PARAMS EBRACKET auth_parameters
   90           | OBRACKET SPLIT EBRACKET split_options
   91           | OBRACKET BOOTVECTORS EBRACKET bootvectors_list
   92           | AUTHJTAG_CONFIG OBRACE authjtag_attr_list EBRACE
   93           | OPTIONAL_DATA OBRACE optional_data EBRACE
   94           | LMS_KEY_PARAMS OBRACE lms_params_list EBRACE
   95           | LMS_KEY_PARAMS OBRACE lms_params_string_list EBRACE
   96           | LMS_KEY_PARAMS OBRACE lms_params_string_type_list EBRACE

   97 sec_boot_attr_list: sec_boot_attr
   98                   | sec_boot_attr COMMA sec_boot_attr_list

   99 sec_boot_attr: boot_device_type
  100              | IMAGE_STORE
  101              | ADDRESS EQUAL expression

  102 fsbl_attr_list: fsbl_attr
  103               | fsbl_attr COMMA fsbl_attr_list
  104               | fsbl_attr fsbl_attr_list

  105 authjtag_attr_list: authjtag_attr
  106                   | authjtag_attr COMMA authjtag_attr_list
  107                   | authjtag_attr authjtag_attr_list

  108 authjtag_attr: REVOKE_ID EQUAL expression
  109              | SPK_REVOKE_ID EQUAL expression
  110              | DEVICE_DNA EQUAL HEXWORD
  111              | JTAG_TIMEOUT EQUAL expression

  112 fsbl_attr: core
  113          | bh_rsa
  114          | auth_hash
  115          | int_hash
  116          | pufhd_loc
  117          | auth_only
  118          | opt_key
  119          | PUF4KMODE
  120          | SHUTTER EQUAL expression
  121          | dpa_cm
  122          | SMAP_WIDTH EQUAL expression
  123          | BYPASS_IDCODE_CHECK
  124          | A_HWROT
  125          | S_HWROT
  126          | PUFROSWAP EQUAL expression
  127          | DICE

  128 $@5: /* empty */

  129 file_spec: OBRACKET $@5 attribute_list EBRACKET filename
  130          | filename

  131 $@6: /* empty */

  132 new_file_spec: OBRACE $@6 new_attribute_list EBRACE

  133 new_attribute_list: attribute
  134                   | new_attribute
  135                   | new_attribute COMMA new_attribute_list
  136                   | attribute COMMA new_attribute_list
  137                   | new_attribute new_attribute_list
  138                   | attribute new_attribute_list

  139 new_attribute: PFILE EQUAL filename
  140              | ID EQUAL expression
  141              | IMAGE_STORE EQUAL expression
  142              | PARTITION_TYPE EQUAL boolattr
  143              | PARTITION_TYPE EQUAL PMCDATA
  144              | BIF_SECTION EQUAL WORD

  145 attribute_list: attribute
  146               | attribute COMMA attribute_list

  147 attribute: boolattr
  148          | optattr
  149          | numattr
  150          | fileattr
  151          | blocksattr_list

  152 blocksattr_list: BLOCKS EQUAL blocksattr
  153                | AUTHBLOCKS EQUAL authblockattr

  154 blocksattr: blockattr
  155           | blockattr SEMICOLON blocksattr

  156 bootvectors_list: bootvector
  157                 | bootvector COMMA bootvectors_list

  158 bootvector: expression

  159 authblockattr: expression

  160 boolattr: BOOTLOADER
  161         | BOOT
  162         | USER
  163         | STATIC
  164         | NOAUTOSTART
  165         | MULTIBOOT
  166         | PROTECTED
  167         | EARLY_HANDOFF
  168         | HIVEC
  169         | XIP_MODE
  170         | INIT
  171         | BOOTIMAGE
  172         | key_file
  173         | other_files
  174         | ptypevalue
  175         | LOCKSTEP

  176 trustzone_type: TRUSTZONE
  177               | TRUSTZONE EQUAL TRUSTZONE_TYPE

  178 blockattr: expression
  179          | expression LPAREN expression RPAREN
  180          | expression LPAREN ASTERISK RPAREN

  181 optattr: AUTHENTICATION EQUAL authvalue
  182        | ENCRYPTION EQUAL encrvalue
  183        | CHECKSUM EQUAL checkvalue
  184        | PARTITION_OWNER EQUAL pownervalue
  185        | DEST_CPU EQUAL dest_cpu_type
  186        | DEST_DEVICE EQUAL dest_device_type
  187        | EXCEPTION_LEVEL EQUAL exception_level_type
  188        | AES_KEY_FILE EQUAL filename
  189        | PPK_FILE EQUAL filename
  190        | PSK_FILE EQUAL filename
  191        | SPK_FILE EQUAL filename
  192        | SSK_FILE EQUAL filename
  193        | SPK_SELECT EQUAL spkselect
  194        | SPK_ID EQUAL expression
  195        | SPK_SIGNATURE_FILE EQUAL filename
  196        | trustzone_type
  197        | PARTITION_TYPE EQUAL ptypevalue
  198        | KEYSRC_ENCRYPTION EQUAL key_src
  199        | REVOKE_ID EQUAL expression
  200        | SPK_REVOKE_ID EQUAL expression
  201        | DPA_CM
  202        | SLR_NUM EQUAL expression
  203        | CLUSTER_NUM EQUAL expression
  204        | PUFHD_LOC
  205        | DELAY_AUTH
  206        | TCM_BOOT

  207 other_file_attr: INIT
  208                | key_file
  209                | BH_KEK_IV
  210                | BBRAM_KEK_IV
  211                | EFUSE_KEK_IV
  212                | EFUSE_USER_KEK0_IV
  213                | EFUSE_USER_KEK1_IV
  214                | USER_KEYS

  215 authvalue: NONE
  216          | AUTHVALUE

  217 encrvalue: NONE
  218          | ENCRVALUE

  219 checkvalue: NONE
  220           | CHECKSUMVALUE

  221 pownervalue: POWNERVALUE

  222 ptypevalue: PTYPEVALUE

  223 key_src: KEY_SRC

  224 core: CORE

  225 bh_rsa: BH_RSA

  226 dpa_cm: DPA_CM

  227 auth_hash: AUTH_HASH

  228 int_hash: INT_HASH

  229 pufhd_loc: PUFHD_LOC

  230 opt_key: OPT_KEY

  231 auth_only: AUTH_ONLY

  232 boot_device_type: BOOT_DEVICE_TYPE

  233 dest_cpu_type: DEST_CPU_TYPE

  234 dest_device_type: DEST_DEVICE_TYPE

  235 exception_level_type: EXCEPTION_LEVEL_TYPE

  236 numattr: ALIGNMENT EQUAL expression
  237        | OFFSET EQUAL expression
  238        | RESERVE_LEGACY EQUAL expression
  239        | RESERVE EQUAL expression
  240        | LOAD EQUAL expression
  241        | STARTUP EQUAL expression
  242        | BIGENDIAN
  243        | A32_MODE
  244        | PARTITION_NUM EQUAL expression
  245        | TCM_A_REGION EQUAL expression
  246        | TCM_B_REGION EQUAL expression
  247        | TCM_C_REGION EQUAL expression

  248 fileattr: PRESIGN EQUAL filename
  249         | UDF_DATA EQUAL filename

  250 key_file: AES_KEY_FILE
  251         | rsa_key_file
  252         | SPK_SIGNATURE_FILE
  253         | BH_SIGNATURE_FILE
  254         | HEADER_SIGNATURE_FILE
  255         | BH_KEY_FILE
  256         | PUF_HELPER_FILE
  257         | BH_KEY_IV
  258         | FAMILY_KEY

  259 rsa_key_file: PPK_FILE
  260             | PSK_FILE
  261             | SPK_FILE
  262             | SSK_FILE

  263 other_files: PMUFW_IMAGE
  264            | PMCDATA
  265            | UDF_BH

  266 auth_parameters: PPK_SELECT EQUAL expression
  267                | SPK_SELECT EQUAL spkselect
  268                | SPK_ID EQUAL expression
  269                | HEADER_AUTH
  270                | auth_parameters SEMICOLON auth_parameters

  271 spkselect: SPKSELECT

  272 lms_params_list: lms_params_attr
  273                | lms_params_attr SEMICOLON lms_params_attr

  274 lms_params_attr: LMS_HASH EQUAL hashfunc
  275                | LMS_W EQUAL expression
  276                | LMS_H EQUAL expression

  277 hashfunc: HASH_FUNCTION

  278 lms_params_string_list: WORD
  279                       | lms_params_string_list COMMA lms_params_string_list

  280 $@7: /* empty */

  281 lms_params_string_type_list: AUTH_KEY_LEVEL OBRACE $@7 lms_params_string_list EBRACE
  282                            | lms_params_string_type_list lms_params_string_type_list

  283 split_options: SPLIT_MODE EQUAL splitmode
  284              | SPLIT_FMT EQUAL splitfmt
  285              | split_options COMMA split_options

  286 splitmode: SPLITMODE

  287 splitfmt: MCS
  288         | BIN

  289 filename: FILENAME
  290         | QFILENAME

  291 number: HEXVALUE
  292       | DECVALUE
  293       | LPAREN expression RPAREN

  294 unary_expression: number
  295                 | PLUS unary_expression
  296                 | NEGATION unary_expression

  297 multiplicative_expression: unary_expression
  298                          | multiplicative_expression MULT unary_expression
  299                          | multiplicative_expression DIVIDE unary_expression
  300                          | multiplicative_expression MODULO unary_expression

  301 additive_expression: multiplicative_expression
  302                    | additive_expression PLUS multiplicative_expression
  303                    | additive_expression MINUS multiplicative_expression

  304 shift_expression: additive_expression
  305                 | shift_expression LSHIFT additive_expression
  306                 | shift_expression RSHIFT additive_expression

  307 and_expression: shift_expression
  308               | and_expression AND shift_expression

  309 xor_expression: and_expression
  310               | xor_expression XOR and_expression

  311 expression: xor_expression
  312           | expression OR xor_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
OBRACE (258) 6 16 57 85 86 92 93 94 95 96 132 281
EBRACE (259) 6 16 57 85 86 92 93 94 95 96 132 281
COMMA (260) 18 39 63 98 103 106 135 136 146 157 279 285
EQUAL (261) 21 22 23 24 25 26 27 28 29 30 31 32 33 35 39 46 47 48 49
    50 51 52 53 65 66 70 71 72 73 74 75 76 88 101 108 109 110 111 120
    122 126 139 140 141 142 143 144 152 153 177 181 182 183 184 185
    186 187 188 189 190 191 192 193 194 195 197 198 199 200 202 203
    236 237 238 239 240 241 244 245 246 247 248 249 266 267 268 274
    275 276 283 284
COLON (262) 4 6
QUOTE (263)
SEMICOLON (264) 38 42 155 270 273
OBRACKET (265) 82 84 87 89 90 91 129
EBRACKET (266) 82 84 87 89 90 91 129
BOOTLOADER (267) 160
XIP_MODE (268) 169
EARLY_HANDOFF (269) 167
HIVEC (270) 168
LOCKSTEP (271) 175
AUTHENTICATION (272) 24 181
ENCRYPTION (273) 21 182
CHECKSUM (274) 33 183
PARTITION_OWNER (275) 184
PARTITION_TYPE (276) 52 71 142 143 197
PARTITION_NUM (277) 244
BOOT_DEVICE (278) 86 87 88
DEST_DEVICE (279) 186
DEST_CPU (280) 185
ADDRESS (281) 101
EXCEPTION_LEVEL (282) 187
TRUSTZONE (283) 176 177
ALIGNMENT (284) 236
OFFSET (285) 237
RESERVE_LEGACY (286) 238
RESERVE (287) 239
LOAD (288) 240
STARTUP (289) 241
BIGENDIAN (290) 242
A32_MODE (291) 243
PPK_SELECT (292) 266
SPK_ID (293) 194 268
SPK_SELECT (294) 193 267
HEADER_AUTH (295) 269
REVOKE_ID (296) 31 53 108 199
SPK_REVOKE_ID (297) 32 109 200
SPLIT_MODE (298) 283
SPLIT_FMT (299) 284
BOOT (300) 161
USER (301) 162
STATIC (302) 163
NOAUTOSTART (303) 164
MULTIBOOT (304) 165
PROTECTED (305) 166
BLOCKS (306) 35 152
AUTHBLOCKS (307) 153
BOOTVECTORS (308) 91
PRESIGN (309) 30 248
BIF_SECTION (310) 144
UDF_DATA (311) 249
MCS (312) 287
BIN (313) 288
SLR_NUM (314) 202
CLUSTER_NUM (315) 203
DICE (316) 127
PCR_NUMBER (317) 75
PCR_MEASUREMENT_INDEX (318) 76
IMAGE_STORE (319) 100 141
PARENT_ID (320) 47
ID_CODE (321) 48
EXT_ID_CODE (322) 49
BYPASS_IDCODE_CHECK (323) 123
A_HWROT (324) 124
S_HWROT (325) 125
UNIQUE_ID (326) 72
PARENT_UNIQUE_ID (327) 73
FUNCTION_ID (328) 74
IMAGE (329) 57
ID (330) 39 46 65 140
NAME (331) 66
DELAY_HANDOFF (332) 67
DELAY_LOAD (333) 68
COPY (334) 70
INCLUDE (335) 4
DELAY_AUTH (336) 205
PARTITION (337) 77
PFILE (338) 139
OPTIONAL_DATA (339) 93
METAHEADER (340) 16
TCM_BOOT (341) 206
TCM_A_REGION (342) 245
TCM_B_REGION (343) 246
TCM_C_REGION (344) 247
WORD (345) 6 66 144 278
HEXWORD (346) 110
FILENAME (347) 289
QFILENAME (348) 290
NONE (349) 215 217 219
DECVALUE (350) 292
HEXVALUE (351) 291
KEYSRC_ENCRYPTION (352) 22 51 82 198
FSBL_CONFIG (353) 84 85
AUTH_PARAMS (354) 89
AUTHJTAG_CONFIG (355) 92
DEVICE_DNA (356) 110
JTAG_TIMEOUT (357) 111
LMS_KEY_PARAMS (358) 94 95 96
LMS_HASH (359) 274
LMS_H (360) 276
LMS_W (361) 275
SHA256 (362)
SHAKE256 (363)
PUF4KMODE (364) 119
PUFROSWAP (365) 126
SHUTTER (366) 120
SPLIT (367) 90
SMAP_WIDTH (368) 122
PUF_HELPER_FILE (369) 256
BH_KEY_FILE (370) 255
BH_KEY_IV (371) 257
BH_KEK_IV (372) 209
BBRAM_KEK_IV (373) 210
EFUSE_KEK_IV (374) 211
EFUSE_USER_KEK0_IV (375) 212
EFUSE_USER_KEK1_IV (376) 213
USER_KEYS (377) 214
PMCDATA (378) 143 264
BOOTIMAGE (379) 171
UDF_BH (380) 265
INIT (381) 69 170 207
PMUFW_IMAGE (382) 263
AES_KEY_FILE (383) 23 188 250
FAMILY_KEY (384) 258
PPK_FILE (385) 25 189 259
PSK_FILE (386) 26 190 260
SPK_FILE (387) 27 191 261
SSK_FILE (388) 28 192 262
SPK_SIGNATURE_FILE (389) 29 195 252
BH_SIGNATURE_FILE (390) 253
HEADER_SIGNATURE_FILE (391) 254
AUTHVALUE (392) 216
ENCRVALUE (393) 218
CHECKSUMVALUE (394) 220
POWNERVALUE (395) 221
PTYPEVALUE (396) 222
KEY_SRC (397) 223
CORE (398) 224
BH_RSA (399) 225
AUTH_HASH (400) 227
INT_HASH (401) 228
PUFHD_LOC (402) 36 204 229
OPT_KEY (403) 230
AUTH_ONLY (404) 231
BOOT_DEVICE_TYPE (405) 232
DEST_DEVICE_TYPE (406) 234
DEST_CPU_TYPE (407) 233
EXCEPTION_LEVEL_TYPE (408) 235
TRUSTZONE_TYPE (409) 177
SPLITMODE (410) 286
DPA_CM (411) 34 201 226
SPKSELECT (412) 271
HASH_FUNCTION (413) 277
AUTH_KEY_LEVEL (414) 281
OR (415) 312
XOR (416) 310
AND (417) 308
MULT (418) 298
DIVIDE (419) 299
MODULO (420) 300
PLUS (421) 295 302
MINUS (422) 303
LSHIFT (423) 305
RSHIFT (424) 306
NEGATION (425) 296
LPAREN (426) 44 45 179 180 293
RPAREN (427) 44 45 179 180 293
ASTERISK (428) 45 180


Nonterminals, with rules where they appear

$accept (174)
    on left: 0
bif (175)
    on left: 1, on right: 0
group_list (176)
    on left: 2 3, on right: 1 3
bifoptions (177)
    on left: 4 6, on right: 3
$@1 (178)
    on left: 5, on right: 6
file_list (179)
    on left: 7 8 9 10 11 12 13 14, on right: 6 8 9 10 11 12 13 14
metahdr_spec (180)
    on left: 16, on right: 11
$@2 (181)
    on left: 15, on right: 16
metahdr_attr_list (182)
    on left: 17 18 19, on right: 16 18 19
metahdr_attr (183)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36, on right:
    17 18 19
optional_data (184)
    on left: 37 38, on right: 38 93
optional_data_attr (185)
    on left: 39 40, on right: 37 38
metahdr_blk (186)
    on left: 41 42, on right: 35 42
metahdr_blk_attr (187)
    on left: 43 44 45, on right: 41 42
new_pdi_spec (188)
    on left: 46 47 48 49 50 51 52 53, on right: 12
image_spec (189)
    on left: 54 55, on right: 10 55
image_list (190)
    on left: 57, on right: 54 55
$@3 (191)
    on left: 56, on right: 57
image_content (192)
    on left: 58 59 60 61, on right: 57 59 60 61
image_attributes_list (193)
    on left: 62 63 64, on right: 59 63 64
image_attributes (194)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76, on right: 62 63 64
partition_spec (195)
    on left: 77 78, on right: 14 61
partition_content (196)
    on left: 79 80 81, on right: 77 78 80 81
other_spec (197)
    on left: 82 84 85 86 87 88 89 90 91 92 93 94 95 96, on right: 9
$@4 (198)
    on left: 83, on right: 84
sec_boot_attr_list (199)
    on left: 97 98, on right: 86 98
sec_boot_attr (200)
    on left: 99 100 101, on right: 97 98
fsbl_attr_list (201)
    on left: 102 103 104, on right: 84 85 103 104
authjtag_attr_list (202)
    on left: 105 106 107, on right: 92 106 107
authjtag_attr (203)
    on left: 108 109 110 111, on right: 105 106 107
fsbl_attr (204)
    on left: 112 113 114 115 116 117 118 119 120 121 122 123 124 125
    126 127, on right: 102 103 104
file_spec (205)
    on left: 129 130, on right: 8 60 80
$@5 (206)
    on left: 128, on right: 129
new_file_spec (207)
    on left: 132, on right: 13 81
$@6 (208)
    on left: 131, on right: 132
new_attribute_list (209)
    on left: 133 134 135 136 137 138, on right: 132 135 136 137 138
new_attribute (210)
    on left: 139 140 141 142 143 144, on right: 134 135 137
attribute_list (211)
    on left: 145 146, on right: 129 146
attribute (212)
    on left: 147 148 149 150 151, on right: 133 136 138 145 146
blocksattr_list (213)
    on left: 152 153, on right: 151
blocksattr (214)
    on left: 154 155, on right: 152 155
bootvectors_list (215)
    on left: 156 157, on right: 91 157
bootvector (216)
    on left: 158, on right: 156 157
authblockattr (217)
    on left: 159, on right: 153
boolattr (218)
    on left: 160 161 162 163 164 165 166 167 168 169 170 171 172 173
    174 175, on right: 142 147
trustzone_type (219)
    on left: 176 177, on right: 196
blockattr (220)
    on left: 178 179 180, on right: 154 155
optattr (221)
    on left: 181 182 183 184 185 186 187 188 189 190 191 192 193 194
    195 196 197 198 199 200 201 202 203 204 205 206, on right: 148
other_file_attr (222)
    on left: 207 208 209 210 211 212 213 214, on right: 50
authvalue (223)
    on left: 215 216, on right: 24 181
encrvalue (224)
    on left: 217 218, on right: 21 182
checkvalue (225)
    on left: 219 220, on right: 33 183
pownervalue (226)
    on left: 221, on right: 184
ptypevalue (227)
    on left: 222, on right: 52 71 174 197
key_src (228)
    on left: 223, on right: 22 51 82 198
core (229)
    on left: 224, on right: 112
bh_rsa (230)
    on left: 225, on right: 113
dpa_cm (231)
    on left: 226, on right: 121
auth_hash (232)
    on left: 227, on right: 114
int_hash (233)
    on left: 228, on right: 115
pufhd_loc (234)
    on left: 229, on right: 116
opt_key (235)
    on left: 230, on right: 118
auth_only (236)
    on left: 231, on right: 117
boot_device_type (237)
    on left: 232, on right: 87 88 99
dest_cpu_type (238)
    on left: 233, on right: 185
dest_device_type (239)
    on left: 234, on right: 186
exception_level_type (240)
    on left: 235, on right: 187
numattr (241)
    on left: 236 237 238 239 240 241 242 243 244 245 246 247, on right:
    149
fileattr (242)
    on left: 248 249, on right: 150
key_file (243)
    on left: 250 251 252 253 254 255 256 257 258, on right: 172 208
rsa_key_file (244)
    on left: 259 260 261 262, on right: 251
other_files (245)
    on left: 263 264 265, on right: 173
auth_parameters (246)
    on left: 266 267 268 269 270, on right: 89 270
spkselect (247)
    on left: 271, on right: 193 267
lms_params_list (248)
    on left: 272 273, on right: 94
lms_params_attr (249)
    on left: 274 275 276, on right: 272 273
hashfunc (250)
    on left: 277, on right: 274
lms_params_string_list (251)
    on left: 278 279, on right: 95 279 281
lms_params_string_type_list (252)
    on left: 281 282, on right: 96 282
$@7 (253)
    on left: 280, on right: 281
split_options (254)
    on left: 283 284 285, on right: 90 285
splitmode (255)
    on left: 286, on right: 283
splitfmt (256)
    on left: 287 288, on right: 284
filename (257)
    on left: 289 290, on right: 4 23 25 26 27 28 29 30 39 50 129 130
    139 188 189 190 191 192 195 248 249
number (258)
    on left: 291 292 293, on right: 294
unary_expression (259)
    on left: 294 295 296, on right: 295 296 297 298 299 300
multiplicative_expression (260)
    on left: 297 298 299 300, on right: 298 299 300 301 302 303
additive_expression (261)
    on left: 301 302 303, on right: 302 303 304 305 306
shift_expression (262)
    on left: 304 305 306, on right: 305 306 307 308
and_expression (263)
    on left: 307 308, on right: 308 309 310
xor_expression (264)
    on left: 309 310, on right: 310 311 312
expression (265)
    on left: 311 312, on right: 31 32 39 43 44 45 46 47 48 49 53 65
    70 72 73 74 75 76 101 108 109 111 120 122 126 140 141 158 159 178
    179 180 194 199 200 202 203 236 237 238 239 240 241 244 245 246
    247 266 268 275 276 293 312


State 0

    0 $accept: . bif $end

    $default  reduce using rule 2 (group_list)

    bif         go to state 1
    group_list  go to state 2


State 1

    0 $accept: bif . $end

    $end  shift, and go to state 3


State 2

    1 bif: group_list .
    3 group_list: group_list . bifoptions

    INCLUDE  shift, and go to state 4
    WORD     shift, and go to state 5

    $default  reduce using rule 1 (bif)

    bifoptions  go to state 6


State 3

    0 $accept: bif $end .

    $default  accept


State 4

    4 bifoptions: INCLUDE . COLON filename

    COLON  shift, and go to state 7


State 5

    6 bifoptions: WORD . $@1 COLON OBRACE file_list EBRACE

    $default  reduce using rule 5 ($@1)

    $@1  go to state 8


State 6

    3 group_list: group_list bifoptions .

    $default  reduce using rule 3 (group_list)


State 7

    4 bifoptions: INCLUDE COLON . filename

    FILENAME   shift, and go to state 9
    QFILENAME  shift, and go to state 10

    filename  go to state 11


State 8

    6 bifoptions: WORD $@1 . COLON OBRACE file_list EBRACE

    COLON  shift, and go to state 12


State 9

  289 filename: FILENAME .

    $default  reduce using rule 289 (filename)


State 10

  290 filename: QFILENAME .

    $default  reduce using rule 290 (filename)


State 11

    4 bifoptions: INCLUDE COLON filename .

    $default  reduce using rule 4 (bifoptions)


State 12

    6 bifoptions: WORD $@1 COLON . OBRACE file_list EBRACE

    OBRACE  shift, and go to state 13


State 13

    6 bifoptions: WORD $@1 COLON OBRACE . file_list EBRACE

    $default  reduce using rule 7 (file_list)

    file_list  go to state 14


State 14

    6 bifoptions: WORD $@1 COLON OBRACE file_list . EBRACE
    8 file_list: file_list . file_spec
    9          | file_list . other_spec
   10          | file_list . image_spec
   11          | file_list . metahdr_spec
   12          | file_list . new_pdi_spec
   13          | file_list . new_file_spec
   14          | file_list . partition_spec

    OBRACE                 shift, and go to state 15
    EBRACE                 shift, and go to state 16
    OBRACKET               shift, and go to state 17
    PARTITION_TYPE         shift, and go to state 18
    BOOT_DEVICE            shift, and go to state 19
    REVOKE_ID              shift, and go to state 20
    PARENT_ID              shift, and go to state 21
    ID_CODE                shift, and go to state 22
    EXT_ID_CODE            shift, and go to state 23
    IMAGE                  shift, and go to state 24
    ID                     shift, and go to state 25
    PARTITION              shift, and go to state 26
    OPTIONAL_DATA          shift, and go to state 27
    METAHEADER             shift, and go to state 28
    FILENAME               shift, and go to state 9
    QFILENAME              shift, and go to state 10
    KEYSRC_ENCRYPTION      shift, and go to state 29
    FSBL_CONFIG            shift, and go to state 30
    AUTHJTAG_CONFIG        shift, and go to state 31
    LMS_KEY_PARAMS         shift, and go to state 32
    PUF_HELPER_FILE        shift, and go to state 33
    BH_KEY_FILE            shift, and go to state 34
    BH_KEY_IV              shift, and go to state 35
    BH_KEK_IV              shift, and go to state 36
    BBRAM_KEK_IV           shift, and go to state 37
    EFUSE_KEK_IV           shift, and go to state 38
    EFUSE_USER_KEK0_IV     shift, and go to state 39
    EFUSE_USER_KEK1_IV     shift, and go to state 40
    USER_KEYS              shift, and go to state 41
    INIT                   shift, and go to state 42
    AES_KEY_FILE           shift, and go to state 43
    FAMILY_KEY             shift, and go to state 44
    PPK_FILE               shift, and go to state 45
    PSK_FILE               shift, and go to state 46
    SPK_FILE               shift, and go to state 47
    SSK_FILE               shift, and go to state 48
    SPK_SIGNATURE_FILE     shift, and go to state 49
    BH_SIGNATURE_FILE      shift, and go to state 50
    HEADER_SIGNATURE_FILE  shift, and go to state 51

    OBRACE                 [reduce using rule 79 (partition_content)]
    EBRACE                 [reduce using rule 79 (partition_content)]
    OBRACKET               [reduce using rule 79 (partition_content)]
    PARTITION_TYPE         [reduce using rule 79 (partition_content)]
    BOOT_DEVICE            [reduce using rule 79 (partition_content)]
    REVOKE_ID              [reduce using rule 79 (partition_content)]
    PARENT_ID              [reduce using rule 79 (partition_content)]
    ID_CODE                [reduce using rule 79 (partition_content)]
    EXT_ID_CODE            [reduce using rule 79 (partition_content)]
    IMAGE                  [reduce using rule 79 (partition_content)]
    ID                     [reduce using rule 79 (partition_content)]
    PARTITION              [reduce using rule 79 (partition_content)]
    OPTIONAL_DATA          [reduce using rule 79 (partition_content)]
    METAHEADER             [reduce using rule 79 (partition_content)]
    FILENAME               [reduce using rule 79 (partition_content)]
    QFILENAME              [reduce using rule 79 (partition_content)]
    KEYSRC_ENCRYPTION      [reduce using rule 79 (partition_content)]
    FSBL_CONFIG            [reduce using rule 79 (partition_content)]
    AUTHJTAG_CONFIG        [reduce using rule 79 (partition_content)]
    LMS_KEY_PARAMS         [reduce using rule 79 (partition_content)]
    PUF_HELPER_FILE        [reduce using rule 79 (partition_content)]
    BH_KEY_FILE            [reduce using rule 79 (partition_content)]
    BH_KEY_IV              [reduce using rule 79 (partition_content)]
    BH_KEK_IV              [reduce using rule 79 (partition_content)]
    BBRAM_KEK_IV           [reduce using rule 79 (partition_content)]
    EFUSE_KEK_IV           [reduce using rule 79 (partition_content)]
    EFUSE_USER_KEK0_IV     [reduce using rule 79 (partition_content)]
    EFUSE_USER_KEK1_IV     [reduce using rule 79 (partition_content)]
    USER_KEYS              [reduce using rule 79 (partition_content)]
    INIT                   [reduce using rule 79 (partition_content)]
    AES_KEY_FILE           [reduce using rule 79 (partition_content)]
    FAMILY_KEY             [reduce using rule 79 (partition_content)]
    PPK_FILE               [reduce using rule 79 (partition_content)]
    PSK_FILE               [reduce using rule 79 (partition_content)]
    SPK_FILE               [reduce using rule 79 (partition_content)]
    SSK_FILE               [reduce using rule 79 (partition_content)]
    SPK_SIGNATURE_FILE     [reduce using rule 79 (partition_content)]
    BH_SIGNATURE_FILE      [reduce using rule 79 (partition_content)]
    HEADER_SIGNATURE_FILE  [reduce using rule 79 (partition_content)]
